fix: removed useless App.css import  and commented out style affecting visibility in dark mode

--- a/portfolio/src/assets/styles/button.css
+++ b/portfolio/src/assets/styles/button.css
@@ -27,17 +27,17 @@
   transition: 0.5s;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: light) {
   .button button::before {
     background-color: #fff;
   }
-}
+} */
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   .button button::before {
-    background-color: #000;
+    background-color: #fff;
   }
-}
+} */
 
 .button .secondary::before {
   position: absolute;
